Allow auto merging by Renovate of minor/patch updates

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,7 +1,10 @@
 {
     "extends": ["config:base"],
     "docker": {
-        "patch": {
+        "major": {
+            "enabled": false
+        },
+        "minor": {
             "automerge": true
         }
     }
