--- a/Taskfile.dist.yml
+++ b/Taskfile.dist.yml
@@ -12,40 +12,11 @@ includes:
   act:
     taskfile: ./act
     dir: ./act
+  scripts:
+    taskfile: ./scripts
+    dir: ./scripts
 
 tasks:
-
-  run-script:
-    preconditions:
-      - sh: test "{{.RUN_SCRIPT}}" != ""
-        msg: RUN_SCRIPT was not given!
-    cmds:
-      - cmd: docker run
-             --interactive
-             --tty
-             --rm
-             --volume $(pwd):/workdir
-             --workdir /workdir
-             ghcr.io/ilyes512/utils:{{.DOCKER_UTILS_IMAGE_TAG}}
-             /bin/bash -c ./scripts/{{.RUN_SCRIPT}}
-        ignore_error: true
-
-  check-versions:
-    desc: Check kubctl and kubectx versions
-    output: group
-    deps:
-      - task: run-script
-        vars:
-          RUN_SCRIPT: check_kubectl.sh
-      - task: run-script
-        vars:
-          RUN_SCRIPT: check_kubectx.sh
-      - task: run-script
-        vars:
-          RUN_SCRIPT: check_kubens.sh
-      - task: run-script
-        vars:
-          RUN_SCRIPT: check_helm.sh
 
   build:
     desc: Build and run new.Dockerfile
