--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,27 +11,37 @@ jobs:
   build:
     name: Build Image
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        arch: ['linux/amd64', 'linux/arm64']
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Debug action
         uses: hmarr/debug-action@v2
-      - uses: hadolint/hadolint-action@v2.0.0
+      - uses: hadolint/hadolint-action@v3.0.0
       - name: Image name
         id: image_name
-        uses: ASzc/change-string-case-action@v2
+        uses: ASzc/change-string-case-action@v5
         with:
           string: ghcr.io/${{ github.repository }}
       - name: Log in to the Container registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         if: ${{ !(env.ACT || github.actor == 'dependabot[bot]') }}
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2.1.0
+        with:
+          platforms: ${{ matrix.arch }}
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v2.2.1
       - name: Docker meta (ansible)
         id: meta_ansible
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v4
         with:
           images: ${{ steps.image_name.outputs.lowercase }}
           flavor: onlatest=true
@@ -41,7 +51,7 @@ jobs:
             type=ref,event=pr,prefix=pr-
       - name: Docker meta (k8s)
         id: meta_k8s
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v4
         with:
           images: ${{ steps.image_name.outputs.lowercase }}
           flavor: prefix=k8s-,onlatest=true
@@ -50,18 +60,20 @@ jobs:
             type=ref,event=tag
             type=ref,event=pr,prefix=k8s-pr-
       - name: Build and push (ansible)
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: ${{ !(env.ACT || github.actor == 'dependabot[bot]') }}
           context: .
+          platforms: ${{ matrix.arch }}
           target: ansible
           tags: ${{ steps.meta_ansible.outputs.tags }}
           labels: ${{ steps.meta_ansible.outputs.labels }}
       - name: Build and push (k8s)
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v3
         with:
           push: ${{ !(env.ACT || github.actor == 'dependabot[bot]') }}
           context: .
+          platforms: ${{ matrix.arch }}
           target: k8s
           tags: ${{ steps.meta_k8s.outputs.tags }}
           labels: ${{ steps.meta_k8s.outputs.labels }}
