--- a/requirements.txt
+++ b/requirements.txt
@@ -1,77 +1,75 @@
-ansible==5.7.1
-ansible-compat==2.0.3
-ansible-core==2.12.5
-ansible-lint==6.1.0
-arrow==1.2.2
-attrs==21.4.0
-bcrypt==3.2.2
+ansible==7.1.0
+ansible-compat==2.2.7
+ansible-core==2.14.1
+ansible-lint==6.10.0
+arrow==1.2.3
+attrs==22.1.0
+bcrypt==4.0.1
 binaryornot==0.4.4
-bracex==2.2.1
-cachetools==5.0.0
-Cerberus==1.3.2
-certifi==2021.10.8
-cffi==1.15.0
-chardet==4.0.0
-charset-normalizer==2.0.12
+black==22.12.0
+bracex==2.3.post1
+cachetools==5.2.0
+certifi==2022.12.7
+cffi==1.15.1
+chardet==5.1.0
+charset-normalizer==2.1.1
 click==8.1.3
 click-help-colors==0.9.1
 commonmark==0.9.1
 cookiecutter==2.1.1
-cryptography==37.0.2
-distro==1.7.0
+cryptography==38.0.4
+distro==1.8.0
 dnspython==2.2.1
-docker==5.0.3
+docker==6.0.1
 enrich==1.2.7
-google-auth==2.6.6
-hvac==0.11.2
-idna==3.3
-iniconfig==1.1.1
+filelock==3.8.2
+google-auth==2.15.0
+hvac==1.0.2
+idna==3.4
 Jinja2==3.1.2
 jinja2-time==0.2.0
-jsonschema==4.5.1
-kubernetes==23.6.0
-kubernetes-validate==1.23.3
+jsonschema==4.17.3
+kubernetes==25.3.0
+kubernetes-validate==1.26.0
 MarkupSafe==2.1.1
-molecule==3.6.1
-molecule-docker==1.1.0
+molecule==4.0.4
+molecule-docker==2.1.0
+mypy-extensions==0.4.3
 netaddr==0.8.0
-oauthlib==3.2.1
+oauthlib==3.2.2
 openshift==0.13.1
-packaging==21.3
-paramiko==2.10.4
+packaging==22.0
 passlib==1.7.4
-pathspec==0.9.0
-pip==22.1
+pathspec==0.10.3
+pip==22.3.1
+platformdirs==2.6.0
 pluggy==1.0.0
-poyo==0.5.0
-py==1.11.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
-Pygments==2.12.0
-PyNaCl==1.5.0
-pyparsing==3.0.9
-pyrsistent==0.18.1
-pytest==7.1.2
+Pygments==2.13.0
+pyhcl==0.4.4
+pyrsistent==0.19.2
 python-dateutil==2.8.2
-python-slugify==6.1.2
+python-slugify==7.0.0
 python-string-utils==1.0.0
 PyYAML==6.0
-requests==2.27.1
+requests==2.28.1
 requests-oauthlib==1.3.1
-resolvelib==0.5.4
-rich==12.4.1
-rsa==4.8
+resolvelib==0.8.1
+rich==12.6.0
+rsa==4.9
 ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.6
+ruamel.yaml.clib==0.2.7
 selinux==0.2.1
-setuptools==62.2.0
+setuptools==65.6.3
 six==1.16.0
-subprocess-tee==0.3.5
+subprocess-tee==0.4.1
 text-unidecode==1.3
 tomli==2.0.1
-urllib3==1.26.9
-wcmatch==8.3
-websocket-client==1.3.2
-wheel==0.37.1
-yamllint==1.26.3
+typing_extensions==4.4.0
+urllib3==1.26.13
+wcmatch==8.4.1
+websocket-client==1.4.2
+wheel==0.38.4
+yamllint==1.28.0
