--- a/requirements.txt
+++ b/requirements.txt
@@ -1,75 +1,68 @@
-ansible==7.1.0
-ansible-compat==2.2.7
-ansible-core==2.14.1
-ansible-lint==6.10.0
-arrow==1.2.3
-attrs==22.1.0
-bcrypt==4.0.1
-binaryornot==0.4.4
-black==22.12.0
-bracex==2.3.post1
-cachetools==5.2.0
-certifi==2022.12.7
-cffi==1.15.1
-chardet==5.1.0
-charset-normalizer==2.1.1
-click==8.1.3
-click-help-colors==0.9.1
-commonmark==0.9.1
-cookiecutter==2.1.1
-cryptography==39.0.1
-distro==1.8.0
-dnspython==2.2.1
-docker==6.0.1
+ansible==8.7.0
+ansible-compat==4.1.11
+ansible-core==2.15.8
+ansible-lint==6.22.2
+attrs==23.2.0
+bcrypt==4.1.2
+black==23.12.1
+bracex==2.4
+cachetools==5.3.2
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+click-help-colors==0.9.4
+cryptography==42.0.1
+dnspython==2.5.0
+docker==7.0.0
 enrich==1.2.7
-filelock==3.8.2
-google-auth==2.15.0
-hvac==1.0.2
-idna==3.4
-Jinja2==3.1.2
-jinja2-time==0.2.0
-jsonschema==4.17.3
-kubernetes==25.3.0
-kubernetes-validate==1.26.0
-MarkupSafe==2.1.1
-molecule==4.0.4
-molecule-docker==2.1.0
-mypy-extensions==0.4.3
-netaddr==0.8.0
+filelock==3.13.1
+google-auth==2.27.0
+hvac==2.1.0
+idna==3.6
+importlib-resources==5.0.7
+Jinja2==3.1.3
+jsonschema==4.21.1
+jsonschema-specifications==2023.12.1
+kubernetes==29.0.0
+kubernetes-validate==1.29.1
+markdown-it-py==3.0.0
+MarkupSafe==2.1.4
+mdurl==0.1.2
+molecule==6.0.3
+mypy-extensions==1.0.0
+netaddr==0.10.1
 oauthlib==3.2.2
-openshift==0.13.1
-packaging==22.0
+openshift==0.13.2
+packaging==23.2
 passlib==1.7.4
-pathspec==0.10.3
-pip==22.3.1
-platformdirs==2.6.0
-pluggy==1.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
+pathspec==0.12.1
+pip==23.3.2
+platformdirs==4.1.0
+pluggy==1.4.0
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
 pycparser==2.21
-Pygments==2.13.0
-pyhcl==0.4.4
-pyrsistent==0.19.2
+Pygments==2.17.2
 python-dateutil==2.8.2
-python-slugify==7.0.0
 python-string-utils==1.0.0
-PyYAML==6.0
+PyYAML==6.0.1
+referencing==0.32.1
 requests==2.31.0
 requests-oauthlib==1.3.1
-resolvelib==0.8.1
-rich==12.6.0
+resolvelib==1.0.1
+rich==13.7.0
+rpds-py==0.17.1
 rsa==4.9
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.7
-selinux==0.2.1
-setuptools==65.6.3
+ruamel.yaml==0.18.5
+ruamel.yaml.clib==0.2.8
+setuptools==69.0.3
 six==1.16.0
 subprocess-tee==0.4.1
-text-unidecode==1.3
 tomli==2.0.1
-typing_extensions==4.4.0
-urllib3==1.26.13
-wcmatch==8.4.1
-websocket-client==1.4.2
-wheel==0.38.4
-yamllint==1.28.0
+typing_extensions==4.9.0
+urllib3==2.1.0
+wcmatch==8.5
+websocket-client==1.7.0
+wheel==0.42.0
+yamllint==1.33.0
