--- a/requirements.txt
+++ b/requirements.txt
@@ -1,67 +1,69 @@
-ansible==9.1.0
-ansible-compat==4.1.11
-ansible-core==2.16.2
-ansible-lint==6.22.2
+ansible==9.5.1
+ansible-compat==24.5.1
+ansible-core==2.16.6
+ansible-lint==24.5.0
 attrs==23.2.0
-bcrypt==4.1.2
-black==23.12.1
+bcrypt==4.1.3
+black==24.4.2
 bracex==2.4
-cachetools==5.3.2
-certifi==2023.11.17
+cachetools==5.3.3
+certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
 click==8.1.7
 click-help-colors==0.9.4
-cryptography==42.0.1
-dnspython==2.5.0
+cryptography==42.0.7
+dnspython==2.6.1
 docker==7.0.0
 enrich==1.2.7
-filelock==3.13.1
-google-auth==2.27.0
-hvac==2.1.0
-idna==3.6
-importlib-resources==6.1.1
-Jinja2==3.1.3
-jsonschema==4.21.1
+filelock==3.14.0
+google-auth==2.29.0
+hvac==2.2.0
+idna==3.7
+importlib_metadata==7.1.0
+importlib_resources==6.4.0
+Jinja2==3.1.4
+jsonschema==4.22.0
 jsonschema-specifications==2023.12.1
 kubernetes==29.0.0
 kubernetes-validate==1.29.1
 markdown-it-py==3.0.0
-MarkupSafe==2.1.4
+MarkupSafe==2.1.5
 mdurl==0.1.2
-molecule==6.0.3
+molecule==24.2.1
 mypy-extensions==1.0.0
-netaddr==0.10.1
+netaddr==1.2.1
 oauthlib==3.2.2
 openshift==0.13.2
-packaging==23.2
+packaging==24.0
 passlib==1.7.4
 pathspec==0.12.1
-pip==23.3.2
-platformdirs==4.1.0
-pluggy==1.4.0
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.21
-Pygments==2.17.2
-python-dateutil==2.8.2
+pip==24.0
+platformdirs==4.2.2
+pluggy==1.5.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+Pygments==2.18.0
+python-dateutil==2.9.0.post0
 python-string-utils==1.0.0
 PyYAML==6.0.1
-referencing==0.32.1
+referencing==0.35.1
 requests==2.31.0
-requests-oauthlib==1.3.1
+requests-oauthlib==2.0.0
 resolvelib==1.0.1
-rich==13.7.0
-rpds-py==0.17.1
+rich==13.7.1
+rpds-py==0.18.1
 rsa==4.9
-ruamel.yaml==0.18.5
+ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.8
-setuptools==69.0.3
+setuptools==69.5.1
 six==1.16.0
 subprocess-tee==0.4.1
-typing_extensions==4.9.0
-urllib3==2.1.0
-wcmatch==8.5
-websocket-client==1.7.0
-wheel==0.42.0
-yamllint==1.33.0
+typing_extensions==4.11.0
+urllib3==2.2.1
+wcmatch==8.5.2
+websocket-client==1.8.0
+wheel==0.43.0
+yamllint==1.35.1
+zipp==3.18.1
