Updated python deps

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,70 @@
-ansible==9.5.1
-ansible-compat==24.5.1
-ansible-core==2.16.6
-ansible-lint==24.5.0
-attrs==23.2.0
-bcrypt==4.1.3
-black==24.4.2
-bracex==2.4
-cachetools==5.3.3
-certifi==2024.7.4
-cffi==1.16.0
+ansible==10.4.0
+ansible-compat==24.9.1
+ansible-core==2.17.4
+ansible-lint==24.9.2
+attrs==24.2.0
+bcrypt==4.2.0
+black==24.8.0
+bracex==2.5
+cachetools==5.5.0
+certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 click==8.1.7
 click-help-colors==0.9.4
 cryptography==43.0.1
 dnspython==2.6.1
-docker==7.0.0
+docker==7.1.0
+durationpy==0.7
 enrich==1.2.7
-filelock==3.14.0
-google-auth==2.29.0
-hvac==2.2.0
-idna==3.7
-importlib_metadata==7.1.0
-importlib_resources==6.4.0
+filelock==3.16.1
+google-auth==2.35.0
+hvac==2.3.0
+idna==3.10
+importlib_metadata==8.5.0
+importlib_resources==6.4.5
 Jinja2==3.1.4
-jsonschema==4.22.0
+jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
-kubernetes==29.0.0
-kubernetes-validate==1.29.1
+kubernetes==31.0.0
+kubernetes-validate==1.31.0
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
-molecule==24.2.1
+molecule==24.9.0
 mypy-extensions==1.0.0
-netaddr==1.2.1
+netaddr==1.3.0
 oauthlib==3.2.2
 openshift==0.13.2
-packaging==24.0
+packaging==24.1
 passlib==1.7.4
 pathspec==0.12.1
-pip==24.0
-platformdirs==4.2.2
+pip==24.2
+platformdirs==4.3.6
 pluggy==1.5.0
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-string-utils==1.0.0
-PyYAML==6.0.1
+PyYAML==6.0.2
 referencing==0.35.1
-requests==2.32.0
+requests==2.32.3
 requests-oauthlib==2.0.0
 resolvelib==1.0.1
-rich==13.7.1
-rpds-py==0.18.1
+rich==13.8.1
+rpds-py==0.20.0
 rsa==4.9
 ruamel.yaml==0.18.6
 ruamel.yaml.clib==0.2.8
-setuptools==70.0.0
+setuptools==75.1.0
 six==1.16.0
-subprocess-tee==0.4.1
-typing_extensions==4.11.0
-urllib3==2.2.2
-wcmatch==8.5.2
+subprocess-tee==0.4.2
+typing_extensions==4.12.2
+urllib3==2.2.3
+wcmatch==9.0
 websocket-client==1.8.0
-wheel==0.43.0
+wheel==0.44.0
 yamllint==1.35.1
-zipp==3.19.1
+zipp==3.20.2
